hard-gists/4119191/run.log
=== Docker Run Log for 4119191 ===
Started at: Mi 29. Okt 14:22:11 CET 2025

[2025-10-29 14:22:11] START: Running container for 4119191
[2025-10-29 14:22:12] SUCCESS: Container 9b618a741991750c752560b7f23258141f42cf2faab275b0110ea5838edd1ddc started for 4119191
=== Container logs for 4119191 ===
  File "/snippet.py", line 136
    print "."
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4119191 ===
[2025-10-29 14:22:14] INFO: Container 9b618a741991750c752560b7f23258141f42cf2faab275b0110ea5838edd1ddc has stopped
